ajout de la div colorée

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
-input.ng-invalid {
+#incorrect {
     background-color:red;
+    width: 50px;
+    height: 50px;
 }
-input.ng-valid {
+#correct {
     background-color:green;
+    width: 50px;
+    height: 50px;
 }
