--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
-#incorrect {
+.error {
     background-color:red;
     width: 50px;
     height: 50px;
 }
-#correct {
+.valid {
     background-color:green;
     width: 50px;
     height: 50px;
